# HumanStudy-Bench

./: .gitignore  CLEANUP_SUMMARY.md  DEVELOPMENT.md  LICENSE  MATERIALS_CHECKLIST.md  P_TEST_THRESHOLD_DECISION_TREE.txt  P_TEST_THRESHOLD_EXPLANATION.md  P_TEST_THRESHOLD_QUICK_REFERENCE.txt  QUESTIONS_ANSWERED.md  README.md  SETUP_COMMANDS.md  STUDIES_OVERVIEW.md  STUDY_002_IMPLEMENTATION_COMPLETE.md  STUDY_003_IMPLEMENTATION.md  STUDY_003_PROFILE_IMPLEMENTATION.md  STUDY_004_ANALYSIS.md  STUDY_005_BEFORE_AFTER.md  STUDY_005_DISCREPANCIES.md  STUDY_005_UPDATE_SUMMARY.md  USAGE_GUIDE.md  check_study004_data.py  check_study_004_results.py  debug_study_002_raw.py  debug_study_004_execution.py  evaluate_results.py  gui.py  inspect_study_002.py  pyproject.toml  quick_api_test.py  requirements.txt  run_full_benchmark.py  run_study_001.py  run_study_004_check.py  run_study_006.py  setup.py  setup_pipelines.sh  setup_pipelines_auto.sh  study_004_detailed_responses.json  study_summary_table.tex  test_agent_regex.py  (+16 more)
.cursor/plans/: semi-manual_study_generation_pipeline_2bc004c7.plan.md
backup/src/: __init__.py
data/: registry.json
data/schemas/: ground_truth_schema.json  specification_schema.json
docs/: CHANGES.md  CODE_REVIEW_FIXES.md  CONTINUOUS_SCORING_UPDATE.md  IMPLEMENTATION_COMPLETE.md  OPENROUTER_INTEGRATION.md  QUICKSTART.md  TWO_TIER_EVALUATION_FRAMEWORK.md  TWO_TIER_IMPLEMENTATION_SUMMARY.md  api_reference.md  benchmark_overview.md  evaluation_metrics.md  getting_started.md  llm_participant_agent_guide.md  openrouter_guide.md  paper_curation_guide.md  prompt_builder_guide.md  study_config_guide.md
examples/: 10_llm_participant_demo.py  11_custom_profiles.py  30_prompt_builder_demo.py  40_openrouter_demo.py
generation_pipeline/: README.md  README_FILE_MODIFIER.md  __init__.py  modify_files.py  pipeline.py  run.py
notebooks/: README.md
scripts/: quick_test.py  quick_test_openrouter.py  test_openrouter.py  test_refactored_agent.py  validate_study.py
tests/: test_benchmark.py
validation_pipeline/: QUICKSTART.md  README.md  __init__.py  pipeline.py  requirements.txt  run_validation.py
(+269 files in other folders)
